# rust-cli

./: Cargo.toml  todos.json
cli/: Cargo.toml  todos.json
cli/src/: main.rs
