[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4", features = ["derive"] }
uuid = { version = "^1", features = [
   "v4",
   "fast-rng",
   "macro-diagnostics",
] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
colored={version = "^2"}
